Add commit message

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,7 +4,7 @@
 <html lang="eng">
     <head>
         <meta charset="UTF-8">
-        <title>App landing page design</title>
+        <title>MYCN|Contact</title>
         
    
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
@@ -863,8 +863,9 @@ contact-details h3{
                 }
              }
          </script>
-          <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmR05ZhODA_OlbJqrit4QceMVE4Mgt8Iw&callback=initMap">
+            <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDb3pSGT94da9qLdj9EttcA_72uwgryiw&callback=initMap">
+    </script>
     </script>
 
       </section>
