--- a/templates/programs.html
+++ b/templates/programs.html
@@ -23,6 +23,7 @@
             
             body{
     font: 300 16px/22px "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    overflow-x: hidden;
 }
             .program{
                 background-color: aliceblue;
@@ -482,9 +483,10 @@
         </div>
         </div>
         </section>
-       <section class="program">
+       <section class="program center-block">
          <div class="container">
-         
+          <div class="row">
+            <div class="col-sm-6 col-md-4">
          
           
                        <div class="text-over over" king="YOUNG REPORTERS PROGRAM
@@ -492,14 +494,15 @@
 The program  focuses on advocating child rights through child led Radio and TV shows. MYCN works in collaboration with UNICEF Tanzania. Members of this program are children who are below 18 years. For daily updates kindly visit the programme facebook page: Mtandao wa Wanahabari watoto Tanzania  (Young Reporters Network Tanzania) ">
             
         </div>
-         
-                 
-                
+         </div>
+                 <div class="col-sm-6 col-md-4">
                       <div class="text-over new" king="YOUNG MAPPERS PROJECT  
          
 Engaging young people in taking action against Climate Change and Environmental pollution.  ">
           
         </div>
+      </div>
+        <div class="col-sm-6 col-md-4">
           
                        
              
@@ -508,59 +511,73 @@ Engaging young people in taking action against Climate Change and Environmental 
           
 Children plaforms for child participation in issues related to their affairs and world as a whole. They promote accountability on children's issues and  enable children exercise leadership spirit. Program facebook page; Baraza la Watoto Mkoa wa Mwanza - Mwanza Children's Council  ">
         </div>
-            
+          </div>
+          <div class="col-sm-6 col-md-4">
                        <div class="text-over b" king="YOUTH REPORTERS PROGRAM
           
 Media platform for youth to discuss their issues and address their challenges throug radio. We work in partnership with Children's Radio Foundation  (CRF). For daily updwtes visit facebook page of the programme: Wanahabari Vijana TZ - TZ Youth Reporters ">
         </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
                          <div class="text-over h" king="VOLUNTEERS PROGRAM
           
  Gives a chance to different people within and outside the country to volunteer at MYCN ">
         </div>
+      </div>
+         
                          
                          
                          
                          
                          
-                         
-                         
+                       <div class="col-sm-6 col-md-4">  
             
                        <div class="text-over d" king="YOUTH RESEARCHERS  
           
 Engaging youth in research for development.   ">
         </div>
-            
+            </div>
+            <div class="col-sm-6 col-md-4">
                        <div class="text-over e" king="TALENTS FOR LIFE PROGRAM 
           
     Transforming youth talents into employement. Youth are acting, singing, dancing, drawing and designing through the project. Products of their talents generate income for improving their life standard.">
         </div>
-            
+      </div>
+      <div class="col-sm-6 col-md-4">
                        <div class="text-over f" king="SPORTS & GAMES PROGRAM  
           
 Involving youth and children in sports for changes and life improvement. ">
         </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
             
                        <div class="text-over g" king="SHIKOME PROJECT
           
 Shikome is the sukuma word meaning to meet and talk together about culture. The project brings together youth and children of different culture to learn from elders and share cultural values. ">
         </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
             
             <div class="text-over c" king="YOUNG WOMEN ENTREPRENEURSHIP PROJECT
                                 
  Gives an opportunity to young women under 30 years old, who did not have access to basic education or who did not proceed with studies because of extenuating circumstances, to produce new ways of being economically successful in life through entrepreneurship activities.  ">
         </div>
-            
+      </div>
+            <div class="col-sm-6 col-md-4">
                        <div class="text-over i" king="YOUNG REPORTERS PROGRAM
                                            
 The program  focuses on advocating child rights through child led Radio and TV shows. MYCN works in collaboration with UNICEF Tanzania. Members of this program are children who are below 18 years. For daily updates kindly visit the programme facebook page: Mtandao wa Wanahabari watoto Tanzania  (Young Reporters Network Tanzania)">
         </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
             
                        <div class="text-over j" king="YOUNG MAPPERS PROJECT  
          
 Engaging young people in taking action against Climate Change and Environmental pollution. ">
         </div>
-           
+           </div>
           </div> 
+        </div>
         
        </section>
        
