--- a/templates/team.html
+++ b/templates/team.html
@@ -528,9 +528,11 @@
                 </div>
                 <div class="row">
                     <div class="column">
+                        <div class="col-sm-6 col-md-3">
                         <div class="imageblock">
                             <img src="{% static 'img/img/l5.jpg' %}" alt="">
                         </div>
+
                         <div class="text">
                             <h3>    Unknown Uknown <br><span>CEO &amp; FOUNDER</span></h3>
                             <ul>
@@ -541,8 +543,10 @@
                              <li><a href=""><i class="fa fa-twitter"></i></a></li>
                             </ul>
                         </div>
+                         </div>
                     </div>
                     <div class="column">
+                        <div class="col-sm-6 col-md-3">
                         <div class="imageblock">
                             <img src="{% static 'img/img/l5.jpg' %}" alt="">
                         </div>
@@ -557,7 +561,9 @@
                             </ul>
                         </div>
                     </div>
+                    </div>
                     <div class="column">
+                        <div class="col-sm-6 col-md-3">
                         <div class="imageblock">
                             <img src="{% static 'img/img/l5.jpg' %}" alt="">
                         </div>
@@ -572,6 +578,7 @@
                             </ul>
                         </div>
                     </div>
+                </div>
                     <div class="column">
                         <div class="imageblock">
                             <img src="{% static 'img/img/l5.jpg' %}" alt="">
