--- a/templates/donate.html
+++ b/templates/donate.html
@@ -4,7 +4,7 @@
 <html lang="eng">
     <head>
         <meta charset="UTF-8">
-        <title>App landing page design</title>
+        <title>MYCN|Donate</title>
         
    
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
