--- a/templates/team.html
+++ b/templates/team.html
@@ -527,31 +527,12 @@
                    
                 </div>
                 <div class="row">
-                    <div class="column">
-                        <div class="col-sm-6 col-md-3">
-                        <div class="imageblock">
-                            <img src="{% static 'img/img/l5.jpg' %}" alt="">
-                        </div>
-
-                        <div class="text">
-                            <h3>    Unknown Uknown <br><span>CEO &amp; FOUNDER</span></h3>
-                            <ul>
-                             <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                             <li><a href=""><i class="fa fa-instagram"></i></a></li>
-                             <li><a href=""><i class="fa fa-linkedin"></i></a></li>
-                             <li><a href=""><i class="fa fa-google-plus"></i></a></li>
-                             <li><a href=""><i class="fa fa-twitter"></i></a></li>
-                            </ul>
-                        </div>
-                         </div>
-                    </div>
-                    <div class="column">
-                        <div class="col-sm-6 col-md-3">
+                         <div class="column">
                         <div class="imageblock">
                             <img src="{% static 'img/img/l5.jpg' %}" alt="">
                         </div>
                         <div class="text">
-                            <h3>     Unknown Uknown<br><span>ACCOUTANCE</span></h3>
+                            <h3>  Unknown Abdul<br><span>COORDINATOR</span></h3>
                             <ul>
                              <li><a href=""><i class="fa fa-facebook"></i></a></li>
                              <li><a href=""><i class="fa fa-instagram"></i></a></li>
@@ -561,14 +542,13 @@
                             </ul>
                         </div>
                     </div>
-                    </div>
-                    <div class="column">
-                        <div class="col-sm-6 col-md-3">
+                    
+                           <div class="column">
                         <div class="imageblock">
                             <img src="{% static 'img/img/l5.jpg' %}" alt="">
                         </div>
                         <div class="text">
-                            <h3>    Unknown Uknown <br><span>PROGRAM MANAGER</span></h3>
+                            <h3>     Unknown Abdul<br><span>COORDINATOR</span></h3>
                             <ul>
                              <li><a href=""><i class="fa fa-facebook"></i></a></li>
                              <li><a href=""><i class="fa fa-instagram"></i></a></li>
@@ -578,13 +558,29 @@
                             </ul>
                         </div>
                     </div>
-                </div>
+                    
+                   <div class="column">
+                        <div class="imageblock">
+                            <img src="{% static 'img/img/l5.jpg' %}" alt="">
+                        </div>
+                        <div class="text">
+                            <h3>     Unknown Abdul<br><span>COORDINATOR</span></h3>
+                            <ul>
+                             <li><a href=""><i class="fa fa-facebook"></i></a></li>
+                             <li><a href=""><i class="fa fa-instagram"></i></a></li>
+                             <li><a href=""><i class="fa fa-linkedin"></i></a></li>
+                             <li><a href=""><i class="fa fa-google-plus"></i></a></li>
+                             <li><a href=""><i class="fa fa-twitter"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    
                     <div class="column">
                         <div class="imageblock">
                             <img src="{% static 'img/img/l5.jpg' %}" alt="">
                         </div>
                         <div class="text">
-                            <h3>     Unknown Uknown<br><span>COORDINATOR</span></h3>
+                            <h3>     Unknown Abdul<br><span>COORDINATOR</span></h3>
                             <ul>
                              <li><a href=""><i class="fa fa-facebook"></i></a></li>
                              <li><a href=""><i class="fa fa-instagram"></i></a></li>
